--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
+            <label for="email" class="emaillabel">Email Address:</label>
             <input type="email" name="Email" class="email-input" placeholder="Enter your email address">
             <button type="submit" class="healthy"> subscribe</button>
 
