--- a/Calorie-&-Nutrition-Calculator.html
+++ b/Calorie-&-Nutrition-Calculator.html
@@ -172,6 +172,9 @@
       h2 {
         display: none;
       }
+      .emaillabel{
+        display: none;
+      }
       /* Tablet screens (≤ 1024px) */
 /* Tablet screens (≤ 1024px) */
 @media (max-width: 1024px) {
@@ -349,6 +352,7 @@
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
+           <label for="email" class="emaillabel">Email Address:</label>
             <input type="email" name="Email" class="email-input" placeholder="Enter your email address">
             <button type="submit" class="healthy"> subscribe</button>
 
