--- a/Contact-&-Feedback.html
+++ b/Contact-&-Feedback.html
@@ -177,6 +177,9 @@
         height: 3px;
         background-color: #2e7d32;
       }
+      .emaillabel{
+        display: none;
+      }
 
   /* Tablet screens (≤ 1024px) */
 @media (max-width: 1024px) {
@@ -348,6 +351,7 @@
   <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
+           <label for="email" class="emaillabel">Email Address:</label>
             <input type="email" name="Email" class="email-input" placeholder="Enter your email address">
             <button type="submit"> subscribe</button>
 
