--- a/Healthy-Recipes.html
+++ b/Healthy-Recipes.html
@@ -199,6 +199,9 @@
     .emaillabel {
         display: none;
     }
+    .searchhidden {
+        display: none;
+    }
 
     /* Tablet screens (≤ 1024px) */
 @media (max-width: 1024px) {
@@ -327,6 +330,7 @@
 
     <section class=" search">
         <h2>Search Recipe</h2>
+        <label for="Search Recipe" class="searchhidden">Search Recipe</label>
         <input type="text" class="recipe-search" placeholder="search for your favourite Recipes....">
     </section>
 
