--- a/Mindfulness-Page.html
+++ b/Mindfulness-Page.html
@@ -147,6 +147,7 @@
         height: 3px;
         background-color: #2e7d32;
     }
+    
    
     /* Tablet screens (≤ 1024px) */
 @media (max-width: 1024px) {
@@ -295,6 +296,7 @@
 
         <div class="timer">
             <input type="number" id="minutes" placeholder="Minutes" min="1">
+            <label for="min" class="minutes"></label>
             <button id="startTimer">Start Timer</button>
             <p id="timerDisplay">00:00</p>
         </div>
