--- a/Contact-&-Feedback.html
+++ b/Contact-&-Feedback.html
@@ -4,6 +4,8 @@
   <meta name="description" content="GreenBite - Healthy recipes, nutrition tips, and wellness inspiration to live better and eat smarter.">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#81c784">
   <title>GreenBite | Contact & Feedback</title>
   <style>
   *{
@@ -351,9 +353,9 @@
   <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
-           <label for="email" class="emaillabel">Email Address:</label>
-            <input type="email" name="Email" class="email-input" placeholder="Enter your email address">
-            <button type="submit"> subscribe</button>
+          <label for="email" class="emaillabel">Email Address:</label>
+          <input type="email" name="Email" class="email-input" placeholder="Enter your email address">
+          <button type="submit"> subscribe</button>
 
         </form>
         
