--- a/Calorie-&-Nutrition-Calculator.html
+++ b/Calorie-&-Nutrition-Calculator.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Document</title>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#81c784">
     <style>
       *{
         margin: 0;
