--- a/Healthy-Recipes.html
+++ b/Healthy-Recipes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#81c784">
+    <link rel="icon" href="images/favicon.ico">
     <title>Health Recipes</title>
     <style>
   *{
