--- a/Contact-&-Feedback.html
+++ b/Contact-&-Feedback.html
@@ -329,14 +329,14 @@
       ✅ Thank you! Your feedback has been submitted.
     </div>
 
-
+    <!-- LOCATION-->
     <h2>Our Location</h2>
     <iframe 
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3956.503182342216!2d79.85903981534899!3d6.918595306871543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2596d3cb8fe07%3A0x2b0ae2edd563a661!2sAsia%20Pacific%20Institute%20of%20Information%20Technology%20(APIIT)!5e0!3m2!1sen!2slk!4v1699450000000!5m2!1sen!2slk"
       title="Google Map showing GreenBite location in Colombo, Sri Lanka"
       allowfullscreen="" loading="lazy">
     </iframe>
-
+    <!-- FAQ-->
     <h2>Frequently Asked Questions</h2>
     <details>
       <summary>What is GreenBite?</summary>
@@ -351,6 +351,7 @@
       <p>You can use this form or email us at support@greenbite.com.</p>
     </details>
   </div>
+  <!-- FOOTER-->
   <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -362,7 +363,7 @@
         
     </footer>
 
-
+    <!-- JavaScript file -->
     <script src="js-pages/Contact_&_Feedback.js"></script>
 </body>
 </html>
