--- a/Healthy-Recipes.html
+++ b/Healthy-Recipes.html
@@ -264,7 +264,6 @@
     }
 }
 
-/* Extra small screens (≤ 480px) */
 @media (max-width: 480px) {
     .Company_tile {
         font-size: 1.5rem;
@@ -305,7 +304,7 @@
             <div></div>
             <div></div>
         </div>
-
+        <!-- NAV -->
         <nav class="navbar">
             <ul>
                 <li> 
@@ -329,8 +328,9 @@
             </ul>
     </nav>
 </header>
+<!-- HEADING -->
 <h1 class="heading">Healthy Recipes</h1>
-
+    <!-- SEARCH BAR -->
     <section class=" search">
         <h2>Search Recipe</h2>
         <label for="Search Recipe" class="searchhidden">Search Recipe</label>
@@ -338,7 +338,7 @@
     </section>
 
 
-  
+    <!-- BREAKFAST -->
     <section class="menu">
         <h2> 🍳 Breakfast Menu</h2> 
         <div class="menu_item">
@@ -358,7 +358,7 @@
             <p>Tofu Tzatziki Bowls</p>
         </div>
     </section>
-
+    <!-- LUNCH -->
     <section class="menu">
         <h2> 🥗 lunch Menu</h2>   
         <div class="menu_item">
@@ -379,7 +379,7 @@
         </div>
     </section>
 
-   
+    <!-- EVENING -->
     <section class="menu">
         <h2>🍿 Evening Snack</h2>  
         <div class="menu_item">
@@ -400,7 +400,7 @@
         </div>
     </section>
 
-
+     <!-- Dinner -->
     <section class="menu">
         <h2> 🍲 Dinner Menu</h2>   
         <div class="menu_item">
@@ -420,6 +420,7 @@
             <p>Dump Chicken Bake</p>
         </div>
     </section>
+     <!-- FOOTER -->
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -428,7 +429,7 @@
             <button type="submit" class="healthy"> subscribe</button>
 
         </form>
-        
+          <!-- Link to JavaScript file -->
     </footer>
     <script src="js-pages/Healthy-Recipes.js"></script>
 </body>
