--- a/Mindfulness-Page.html
+++ b/Mindfulness-Page.html
@@ -269,6 +269,7 @@
           <div></div>
           <div></div>
         </div>
+         <!--NAV-->
         <nav class="navbar">
             <ul>
                 <li> 
@@ -296,14 +297,14 @@
     <div class="container">
         <div class="breathing-circle"></div>
         <p id="breathText">Inhale...</p>
-
+ <!-- TIMER -->
         <div class="timer">
             <input type="number" id="minutes" placeholder="Minutes" min="1">
             <label for="min" class="minutes"></label>
             <button id="startTimer">Start Timer</button>
             <p id="timerDisplay">00:00</p>
         </div>
-
+ <!-- SOUND-->
         <div class="sounds">
             <button id="sound1">Play Forest</button>
             <button id="sound2">Play rain</button>
@@ -311,6 +312,7 @@
 
         <p>Completed Sessions: <span id="sessionCount">0</span></p>
     </div>
+     <!--FOOTER-->
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -318,7 +320,7 @@
             <button type="submit" class="healthy"> subscribe</button>
 
         </form>
-        
+         <!-- Link to JS file -->
     </footer>
     <script src="js-pages/mindfullness.js"></script>
     
