--- a/Workout-Generator-Page.html
+++ b/Workout-Generator-Page.html
@@ -257,6 +257,7 @@
           <div></div>
           <div></div>
         </div>
+         <!--NAV-->
         <nav class="navbar">
             <ul>
                 <li> 
@@ -317,6 +318,7 @@
     <button>Pause</button>
     <button>Next</button>
   </div>
+   <!-- FOOTER -->
   <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -327,6 +329,7 @@
         </form>
         
     </footer>
+     <!-- Link to JS file -->
     <script src="js-pages/Workout-Generator_page.js"></script>
 </body>
 </html>
