--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <div class="hamburger_icon"></div>
             <div class="hamburger_icon"></div>
          </div>
+          <!-- NAV -->
         <nav class="navbar">
             <ul>
                 <li> 
@@ -41,7 +42,7 @@
     </nav>
 </header>
 
-
+<!-- Big welcome section -->
 <section class="hero">
     <div class="hero_infor">
         <h2>Savor Life. Stay Grounded. Grow Strong.</h2>
@@ -50,6 +51,7 @@
     </div>
 </section>
 
+    <!-- About the website -->
 <section class="about">
     <h2>What Makes GreenBite Special? </h2>
     <p>
@@ -58,6 +60,7 @@
 
     </p>
 </section>
+<!-- Bottom of page -->
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -68,6 +71,7 @@
         </form>
         
     </footer>
+    <!-- Link to JavaScript -->
     <script src="js-pages/index.js"></script>
 
 </body>
