--- a/Calorie-&-Nutrition-Calculator.html
+++ b/Calorie-&-Nutrition-Calculator.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#81c784">
+    <link rel="icon" href="images/favicon.ico">
     <style>
       *{
         margin: 0;
@@ -303,6 +304,7 @@
             </ul>
     </nav>
 </header>
+<!-- Calculator Section -->
         <h1 class="heading">Calorie & Nutrition Calculator</h1>
     <section class="section">
       <h2>Calorie & Nutrition Calculator</h2>
@@ -336,7 +338,7 @@
 
           <button type="submit">Calculate</button>
         </form>
-
+ <!-- hidden until calculation -->
         <section class="results hidden">
           <h2>Results</h2>
           <p><strong>BMR:</strong> <span class="bmr"></span> kcal/day</p>
@@ -350,7 +352,7 @@
         </section>
       </div>
     </section>
-
+    <!-- FOOTER -->
     <footer class="footer">
         <p> 🌱 Fuel your inbox with wellness bites - subscribe now: </p>
         <form class="email-form">
@@ -359,7 +361,7 @@
             <button type="submit" class="healthy"> subscribe</button>
 
         </form>
-        
+       <!-- JS LINK--> 
     </footer>
     <script src="js-pages/Calorie-&-Nutrition-Calculator.js"></script>
   </body>
